crates/plotnik-lib/tests/03-analyze/empty_constructs/empty_sequence.txt
Q = {}
==== diagnostics ====
error: empty `{}` matches nothing
 --> query.ptk:1:5
  |
1 | Q = {}
  |     ^^
  |
help: sequences must contain at least one expression
==== symbols ====
Q
